styles: cores de texto gerais

--- a/assets/themes.css
+++ b/assets/themes.css
@@ -40,10 +40,10 @@
     --primary: #f778ba;
     --primary-dark: #f0429c;
     --primary-light: #ff65b3;
-    --primary-text: #838383;
+    --primary-text: #ffe2f6;
     --background: #5f0033;
     --surface: #2c001b;
-    --text: #838383;
+    --text: #8a4467;
     --text-light: #8b6679;
     --border: #590036;
     --shadow: 0 4px 12px rgba(0, 0, 0, 0.25);
