style: cor texto

--- a/assets/themes.css
+++ b/assets/themes.css
@@ -27,7 +27,7 @@
     --primary: #58a6ff;
     --primary-dark: #388bfd;
     --primary-light: #1f6feb;
-    --primary-text: #838383;
+    --primary-text: #dce1ff;
     --background: #0d1117;
     --surface: #161b22;
     --text: #96989b;
